--- a/index.html
+++ b/index.html
@@ -1,7 +1,8 @@
 <html>
 <body>
 <h1>kaguya</h1>
-    <p>我的学号是<span id="studentnumber">752686560</span>
+    <p>我的学号是<span id="studentnumber">752686560</span>\
+     <img src="u = 2208958198,273280015＆fm = 26＆gp = 0.jpg">
     </p>
 </body>
 </html>
