--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 <html>
 <body>
-<h1>kaguya</h1>
-    <p>我的学号是<span id="studentnumber">752686560</span>
-     <img src="01.jpg">
+<h1>Kaguya Manaka</h1>
+    <p>CN：<span id="studentnumber">蓬莱山辉夜</span>
+     <img src="01.jpg" style="border-radius: 10px 20px 40px 80px">
     </p>
 </body>
 </html>
