--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
 
         $("#next").click(function(){
-            $.get("./data.json",function(result){
+            $.get("./data2.json",function(result){
          $("#myname").text(result.myname);
         $("#mycn").text(result.mycn);   
         })
